# metis

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: nicosia_baseline.yaml  nicosia_sw.yaml  nicosia_v2_heat.yaml  nicosia_v2_sw.yaml
src/metis/: __init__.py
src/metis/cli/: main.py
src/metis/io/: era5.py
src/metis/physics/: heat.py  shallow_water.py
