[metadata]
name = metis
version = 0.1.0
description = Urban climate foresight simulator
license = MIT

[options]
python_requires = >=3.11
package_dir =
    = src
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    xarray
    netCDF4
    pandas
    pyyaml

[options.packages.find]
where = src